--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/Son923/FarCry_Platform#readme",
   "devDependencies": {
     "electron": "^5.0.2"
+  },
+  "dependencies": {
+    "jquery": "^3.4.1"
   }
 }
