--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "eslint": "^5.16.0",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "python-shell": "^1.0.7"
   }
 }
